Add Bazaar order competition alerts